Cambiado subtitulo del hero

--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -10,7 +10,7 @@ import LinkedInIcon from "../Icons/LinkedInIcon.astro";
       <img class="avatar" src="/img/me.webp" alt="Personal image for hero page" />
     </picture>
     <h1>¡Hola! <span>Soy</span> Juan <span>Felipe</span> Ramirez</h1>
-    <p>Junior <span>Front-End</span> Developer</p>
+    <p><span>Front-End</span> Developer</p>
   </div>
   <div class="buttons-container">
     <a class="hero-button" href="#about" aria-label="Go about me section">
